refactor: Update CountertradeRemedialAction and rename CounterTradingActionCreator to CounterTradingRangeActionCreator for improved clarity and functionality